fix(componant:title): dark mode + fix carousel data

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -558,11 +558,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-left: 0.5rem;
   margin-right: 0.5rem;
 }
-.mb-12 {
-  margin-bottom: 3rem;
-}
 .mt-12 {
   margin-top: 3rem;
+}
+.mb-12 {
+  margin-bottom: 3rem;
 }
 .mt-2 {
   margin-top: 0.5rem;
@@ -570,17 +570,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 .mt-3 {
   margin-top: 0.75rem;
 }
-.mt-6 {
-  margin-top: 1.5rem;
-}
-.ml-3 {
-  margin-left: 0.75rem;
-}
 .mt-4 {
   margin-top: 1rem;
 }
 .mb-6 {
   margin-bottom: 1.5rem;
+}
+.ml-3 {
+  margin-left: 0.75rem;
 }
 .ml-5 {
   margin-left: 1.25rem;
@@ -602,6 +599,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .mt-52 {
   margin-top: 13rem;
+}
+.mt-6 {
+  margin-top: 1.5rem;
 }
 .mt-10 {
   margin-top: 2.5rem;
@@ -648,9 +648,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .h-48 {
   height: 12rem;
 }
-.h-10 {
-  height: 2.5rem;
-}
 .h-24 {
   height: 6rem;
 }
@@ -675,6 +672,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .h-full {
   height: 100%;
 }
+.h-10 {
+  height: 2.5rem;
+}
 .h-16 {
   height: 4rem;
 }
@@ -695,9 +695,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .w-full {
   width: 100%;
-}
-.w-10 {
-  width: 2.5rem;
 }
 .w-6 {
   width: 1.5rem;
@@ -722,6 +719,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .w-48 {
   width: 12rem;
+}
+.w-10 {
+  width: 2.5rem;
 }
 .w-0 {
   width: 0px;
@@ -900,11 +900,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .gap-y-6 {
   row-gap: 1.5rem;
 }
-.space-x-1 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.25rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
-}
 .space-y-8 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
@@ -959,11 +954,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .rounded-lg {
   border-radius: 0.5rem;
 }
-.rounded-full {
-  border-radius: 9999px;
-}
 .rounded-md {
   border-radius: 0.375rem;
+}
+.rounded-full {
+  border-radius: 9999px;
 }
 .rounded-3xl {
   border-radius: 1.5rem;
@@ -1096,6 +1091,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .p-3 {
   padding: 0.75rem;
 }
+.px-12 {
+  padding-left: 3rem;
+  padding-right: 3rem;
+}
 .py-12 {
   padding-top: 3rem;
   padding-bottom: 3rem;
@@ -1139,10 +1138,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .px-10 {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
-}
-.px-12 {
-  padding-left: 3rem;
-  padding-right: 3rem;
 }
 .py-56 {
   padding-top: 14rem;
